testsuite/tests/typing-rectypes-bugs/pr5343_bad.compilers.reference
File "pr5343_bad.ml", line 11, characters 2-14:
Error: The type abbreviation u is cyclic
